      Schema that specifies that an element MUST have only child elements
      (element-content). Also if the DOM validates this info when being edited
      then the serializer could never write out whitespace in element content
      without invalidating the document. See
      http://xml.apache.org/xerces2-j/javadocs/dom3-api/index.html Section 2.10

8/19/2004   version 0.2 pre20   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug where the file is kept open by a reader or something too long.
      This didn't allow other editors to open the document until jsXe is
      closed or the objects are garbage collected.

8/18/2004   version 0.2 pre19   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug with reloading a document in the source view.
    * Fixed a bug that caused a document to be loaded dirty because the fact
      that it was dirty was saved to the recent files list
    * Added ability to create and edit processing instruction nodes

8/12/2004   version 0.2 pre18   Ian Lewis <IanLewis@member.fsf.org>

    * The OptionsPanel now extends the EnhancedDialog class. This makes it so
      the Options dialog responds to the escape and enter keys.
    * Fixed bug where when documents are opened but not viewed the split pane
      locations in the default view are set to zero so when you open it the
      next time the panes are messed up
    * Added logic to start editing in the tree if the user starts typing while
      one of the nodes is selected. It moves focus to the right hand pane
      if necessary. It does, however, lose the first key when you start typing.
    * The Move No Drop cursor is now displayed when dragging a node over a
      drop target that rejects it.
    * The SourceView search and replace dialog now closes if you change views.
      The sourceview also reuses the dialog if it's open already when you hit
      the find menu item.

8/11/2004   version 0.2 pre17   Ian Lewis <IanLewis@member.fsf.org>
